# cornac

./: .editorconfig  LICENSE  Makefile  README.md  ansible.cfg  install.yml  sshkeys.yml
.circleci/: config.yml
appliance/: .gitignore  HACKING.md  README.md  (+2 more)
service/: .gitignore  README.md  poc.cfg  pyproject.toml  setup.py
service/cornac/: __init__.py  app.py  cli.py  config.py  default_config.py  errors.py  iaas.py  operator.py  pghelper.sh  ssh.py  utils.py  web.py  worker.py
service/cornac/core/: __init__.py  migrator.py  model.py  user.py
service/cornac/core/config/: __init__.py  defaults.py  writer.py
service/cornac/core/schema/: 000-init.sql  001-instances.sql  002-dramatiq.sql  __init__.py  migrator.py
service/cornac/database/: __init__.py  model.py
service/cornac/database/versions/: 001-instances.sql
service/cornac/files/: bashrc  cornac-setup  cornac-shell  cornac-web.service  cornac-worker.service  purge.sh
service/cornac/flask/: __init__.py  main.py
service/cornac/iaas/: __init__.py  libvirt.py  vcenter.py  vhelper.sh
service/cornac/operator/: __init__.py  basic.py  pghelper.sh
service/cornac/web/: __init__.py  actions.py  auth.py  errors.py  rds.py  xml.py
service/docs/: hacking.md  install.md
service/packaging/: docker-compose.yml  install  mkrpm
service/tests/: cornac-config.py
service/tests/awscli-config/: config  credentials
service/tests/func/: conftest.py  pytest.ini  test_bootstrap.py  test_instance.py
service/tests/unit/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_remote.py  test_worker.py
(+2 files in other folders)
